envoyfilter-wasm-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: wasm-service
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: BOOTSTRAP
    patch:
      operation: MERGE
      value:
        bootstrap_extensions:
        - name: envoy.bootstrap.wasm
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.wasm.v3.WasmService
            singleton: true
            config:
              vm_config:
                vm_id: "healthchecker"
                runtime: "envoy.wasm.runtime.v8"
                code:
                  local:
                    filename: "/var/local/lib/wasm-filters/health.go.wasm"
