random-data-api.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-https
spec:
  hosts:
  - random-data-api.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dummy
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 65000
      name: http
      protocol: HTTP
    hosts:
    - dummy.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dummy
spec:
  gateways:
  - dummy
  hosts:
  - dummy.local
  http:
  - name: dummy-route
    route:
    - destination:
        host: random-data-api.com
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: random-data-api
spec:
  host: random-data-api.com
  trafficPolicy:
    tls:
      mode: SIMPLE
